; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-object.c_fmt_indent.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-object.c_fmt_indent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fmt = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.fmt*)* @fmt_indent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fmt_indent(i32* %0, %struct.fmt* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.fmt*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store %struct.fmt* %1, %struct.fmt** %4, align 8
  %6 = load %struct.fmt*, %struct.fmt** %4, align 8
  %7 = getelementptr inbounds %struct.fmt, %struct.fmt* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %5, align 4
  br label %9

9:                                                ; preds = %13, %2
  %10 = load i32, i32* %5, align 4
  %11 = add nsw i32 %10, -1
  store i32 %11, i32* %5, align 4
  %12 = icmp ne i32 %10, 0
  br i1 %12, label %13, label %20

13:                                               ; preds = %9
  %14 = load i32*, i32** %3, align 8
  %15 = load %struct.fmt*, %struct.fmt** %4, align 8
  %16 = call i32 @fmt_putc(i32* %14, %struct.fmt* %15, i8 signext 32)
  %17 = load i32*, i32** %3, align 8
  %18 = load %struct.fmt*, %struct.fmt** %4, align 8
  %19 = call i32 @fmt_putc(i32* %17, %struct.fmt* %18, i8 signext 32)
  br label %9

20:                                               ; preds = %9
  ret void
}

declare dso_local i32 @fmt_putc(i32*, %struct.fmt*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
